# goit-pythonweb-hw-01

./: README.md  pyproject.toml
src/hw/: logger.py  task_1.py  task_2.py
