[project]
name = "hw"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman",email = "didukhroma@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hw", from = "src"}]

[tool.poetry.scripts]
task1 = "hw.task_1:main"
task2 = "hw.task_2:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
